# sync_box-files_to_s3

./: README.md  pyproject.toml
src/sync_box_files_to_s3/: __init__.py
src/sync_box_files_to_s3/sync-box-files-to-s3/: requirements.txt  samconfig.toml  template.yaml
src/sync_box_files_to_s3/sync-box-files-to-s3/box_connector/: app_config.py  box_operations.py  dynamodb_operations.py  initialize_box_client.py  main.py  models.py
src/sync_box_files_to_s3/sync-box-files-to-s3/scripts/: create_dynamodb.py  create_s3_datasource_bucket.py
sync-box-files-to-s3/: README.md  samconfig.toml  template.yaml
