[project]
name = "sync-box-files-to-s3"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "y-mae-dev", email = "youyiqianye061@gmail.com" }
]
dependencies = [
    "boto3>=1.35.91",
    "box-sdk-gen>=1.9.0",
    "pynamodb>=6.0.1",
    "aws-lambda-powertools>=3.4.0",
    "pip>=24.3.1",
    "boxsdk>=3.13.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sync_box_files_to_s3"]
